# bgtf

./: .gitignore  Makefile  Makefile.bak  README.md  bgtf.c  bgtf.h  bgtfIO.c  bgtfIO.h  config.guess  config.status  config.sub  configure  configure.ac  endianness.h  hashtable.c  hashtable.h  main.c  parser.c  rbtree.c  rbtree.h  rtree.c  rtree.h  source_me.sh  tmp.h  utils.c  utils.h  version.sh
autom4te.cache/: output.0  requests  traces.0
src/: a.out  bgtf-bam.c  bgtf-bam.h  bgtf.c  bgtf.h  bgtfIO.c  bgtfIO.h  config.h  config.h.in  hashtable.c  hashtable.h  list.c  list.h  main.c  molcount.c  molcount.h  rtree.c  rtree.h  sparse.c  sparse.h  tpool.c  tpool.h  utils.c  utils.h  version.h
